# gtm-automation

./: langgraph.json  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
src/gtm_automation/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
